--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YoKota</string>
+    <string name="activity_register_email">Email</string>
+    <string name="activity_register_sign_up">Sign Up</string>
+    <string name="activity_home_register">Register</string>
 </resources>
