--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,39 @@
+<!--
+  ~ Copyright (c) 2019. Scodeid | yogithesymbian | Yogi Arif Widodo.
+  ~ Android Studio 3.5.1
+  ~ Build #AI-191.8026.42.35.5900203, built on September 26, 2019
+  ~ JRE: 1.8.0_202-release-1483-b49-5587405 amd64
+  ~ JVM: OpenJDK 64-Bit Server VM by JetBrains s.r.o
+  ~ Linux 5.2.0-kali3-amd64
+  -->
+
 <resources>
     <string name="app_name">YoKota</string>
     <string name="activity_register_email">Email</string>
     <string name="activity_register_sign_up">Sign Up</string>
     <string name="activity_home_register">Register</string>
+
+    <string name="facebook_app_id">445532792767832</string>
+    <string name="fb_login_protocol_scheme">fb445532792767832</string>
+    <string name="activity_home_log_in">Log in</string>
+    <string name="item_slider_finish">FINISH</string>
+    <string name="item_slider_next">NEXT</string>
+    <string name="item_slider_back">BACK</string>
+    <string name="activity_home_password">Password</string>
+    <string name="activity_home_forgot_password">Forgot Password?</string>
+    <string name="activity_home_need_an_account">NEED AN ACCOUNT?</string>
+    <string name="activity_home_username">Username</string>
+
+    <string-array name="city_list">
+        <item>Bangkok</item>
+        <item>London</item>
+        <item>Paris</item>
+        <item>Singapore</item>
+        <item>New York</item>
+        <item>Istanbul</item>
+        <item>Dubai</item>
+        <item>Kuala Lumpur</item>
+        <item>Hong Kong</item>
+        <item>Barcelona</item>
+    </string-array>
 </resources>
